script.js create

--- a/index.html
+++ b/index.html
@@ -74,11 +74,9 @@
         <div class="info"> 
             <p>&#x1F4A1 Taxas atualizadas em tempo real</p>
         </div>
-
-
-
-
     </div>
+
+    <script src="script.js"></script>
     
 </body>
 </html>
