--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="currency-row">
                 <div class="currency-input">
                     <label for="amount">Valor</label>
-                    <input type="number" id="amount" placeholder="Digite o valor" step="0.1" min="0" required>
+                    <input type="number" id="amount" placeholder="Digite um valor" step="0.1" min="0" required>
                 </div>
                 <div class="currency-select">
                     <label for="fromCurrency">De</label>
